fix: update production configuration for Render deployment